<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navCalendar"
        android:icon="@drawable/ic_nav_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/navScores"
        android:icon="@drawable/ic_nav_scores"
        android:title="@string/nav_scores" />
    <item
        android:id="@+id/navResources"
        android:icon="@drawable/ic_nav_resources"
        android:title="@string/nav_resources" />
    <item
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
